Fixed structer for better linking

--- a/podstrony/podstrony_library/sing.html
+++ b/podstrony/podstrony_library/sing.html
@@ -56,8 +56,8 @@
 				<h2 class="spis">Piosenki Poważne, Obrzędowe i Te Mniej</h2>
 				
 					<h3 class="spis" id="modl1">Kiedy Ranne Wstają Zorze</h3>
-<center>
-<p class="center"align="center">
+
+<p class="center">
 						1. Kiedy ranne wstają zorze<br>
 						Tobie ziemia, Tobie morze,<br>
 						Tobie śpiewa żywioł wszelki:<br>
@@ -83,6 +83,52 @@
 						Tobie chwałę oddajemy,<br>
 						Niech dla Ciebie dziś żyjemy.<br>
 </p>
+<hr>
+<h3 class="spis" id="modl2">Wszystkie Nasze Dzienne Sprawy</h3>
+<p class="center">
+<br>1. Wszystkie nasze dzienne sprawy
+<br>przyjm litośnie Boże prawy,
+<br>A gdy będziem zasypiali,
+<br>niech Cię nawet sen nasz chwali.
+<br>
+<br>2. Twoje oczy obrócone
+<br>dzień i noc patrzą w tę stronę,
+<br>Gdzie niedołężność człowieka
+<br>Twojego ratunku czeka.
+<br>
+<br>3. Odwracaj nocne przygody,
+<br>Od wszelakiej broń nas szkody,
+<br>Miej nas zawsze w swojej pieczy,
+<br>Stróżu i Sędzio człowieczy.
+<br>
+<br>4. A gdy już niebo osiędziem,
+<br>Tobie wspólnie śpiewać będziem,
+<br>Boże w Trójcy niepojęty,
+<br>Święty, na wiek wieków Święty.
+</p>
+<hr>
+<h3 class="spis" id="trakt">Bieszczadzki Trakt</h3>
+<p class="center">
+<br>Kiedy nadejdzie czas, bawi nas ognia blask
+<br>Na polanie gdzie króluje zły
+<br>Gwiezdny pył w ogniu tym Łzy wyciśnie nam dym
+<br>Tańczą iskry z gwiazdami a my… <br>
+<br>Śpiewamy wszyscy w ten radosny czas
+<br>Śpiewamy ilu jest tu nas
+<br>Choć lata szybko młode płyną wiemy, że
+<br>Nigdy nie starzejemy się.<br>
+<br>W lesie gdzie licho śpi, przygoda ma swe drzwi<br>
+<br>Chodźmy tam gdzie na ścianie lasu lśnią
+<br>Oczy sów, wilcze kły, rykiem powietrze drży
+<br>Tylko gwiazdy przyjazne nam są<br>
+<br>Śpiewamy wszyscy w ten radosny czas…<br>
+<br>Dorzuć do ognia drew, w górę niech płanie śpiew
+<br>Wiatr poniesie go w wilgotny świat
+<br>Każdy z nas o tym wie, że znowu spotkamy się
+<br>A połączy nas bieszczadzki trakt
+<br>Śpiewamy wszyscy w ten radosny czas
+</p>
+<h3 class="spis" id="trakt">Bieszczadzki Trakt</h3>
 </center>
 			</div>
 		</div>
