fixed linx and renamed stopka.html to avoid using uppercase

--- a/public/podstrony/library_main.html
+++ b/public/podstrony/library_main.html
@@ -7,7 +7,7 @@
 	<meta name="author" content="JanInExile">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Biblioteka</title>
-	<link rel="stylesheet" type= "text/css" href="css/style.css"/>
+	<link rel="stylesheet" type= "text/css" href="/css/style.css"/>
 	<link rel="shortcut icon" href="../icons/favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=Arya" rel="stylesheet" type= "text/css"/>
 </head>
