--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<meta name="author" content="JanInExile">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Strona Główna</title>
-	<link rel="stylesheet" type= "text/css" href="/css/style.css"/>
+	<link rel="stylesheet" type= "text/css" href="css/style.css"/>
 	<link rel="shortcut icon" href="/icons/favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=Arya" rel="stylesheet" type= "text/css"/>
 </head>
@@ -18,9 +18,9 @@
 	<div class="navbar">
 	<ul id="navbar">
 		<li id="navbarli"><a class="active" href="index.html">Stona Główna</a></li>
-		<li id="navbarli"><a href="/podstrony/about.html">O Drużynie</a></li>
-		<li id="navbarli"><a href="/podstrony/zastepy.html">Zastępy</a></li>
-		<li id="navbarli"><a href="/podstrony/library_main.html">Biblioteka</a></li>
+		<li id="navbarli"><a href="podstrony/about.html">O Drużynie</a></li>
+		<li id="navbarli"><a href="podstrony/zastepy.html">Zastępy</a></li>
+		<li id="navbarli"><a href="podstrony/library_main.html">Biblioteka</a></li>
 	</ul>
 	</div>
 	<center>
