fixed obstacle with class name

--- a/public/podstrony/library_main.html
+++ b/public/podstrony/library_main.html
@@ -45,7 +45,7 @@
 				<br>
 				<p align="right">~Pliniusz Młodszy, Listy VII</p>
 			</blockquote>
-			<div class="table-of-contents-60s">
+			<div class="table-of-contents-60">
 			<a id="normal2" href="podstrony_library/archive_main.html"><center>Archiwum</center></a>
 			<p class="dedykowany"><i>Dział dedykowany wizytacjom</i></p>
 			<hr>
