--- a/public/podstrony/podstrony_library/sing.html
+++ b/public/podstrony/podstrony_library/sing.html
@@ -37,7 +37,7 @@
 	<div class="content3">
 			<h1>Śpiewnik</h1>
 			<div class="sider">
-				<img align="right" alt="progress" src="../../images/sensowne/memorial.jpg"/>
+				<img align="right" alt="progress" src="../../images/sensowne/memorial.JPG"/>
 			</div>
 			<div class="sub">
 				<h2 class="spis">Spis Treści</h2>
