--- a/public/podstrony/zastepy.html
+++ b/public/podstrony/zastepy.html
@@ -6,7 +6,7 @@
 	<meta name="keywords" content="Wichry, Cyklon, ZHR, 5KDH, Radkiewicz, Balcerowski, Pichór, Kądziołek, Stefan Czarniecki, Czarniecki, Kraków, Szare Wilki, Orły, Gryfy, Lwy, Bronowice, Św. Antoni, Antoni">
 	<meta name="author" content="JanInExile">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Strona Główna</title>
+	<title>Zastępy</title>
 	<link rel="stylesheet" type= "text/css" href="/css/style.css"/>
 	<link rel="shortcut icon" href="../icons/favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=Arya" rel="stylesheet" type= "text/css"/>
