Added Songs to Songbook (sing.html)

--- a/public/podstrony/podstrony_library/sing.html
+++ b/public/podstrony/podstrony_library/sing.html
@@ -109,26 +109,57 @@
 <hr>
 <h3 class="spis" id="trakt">Bieszczadzki Trakt</h3>
 <p class="center">
-<br>Kiedy nadejdzie czas, bawi nas ognia blask
+<br>1. Kiedy nadejdzie czas, bawi nas ognia blask
 <br>Na polanie gdzie króluje zły
 <br>Gwiezdny pył w ogniu tym Łzy wyciśnie nam dym
 <br>Tańczą iskry z gwiazdami a my… <br>
-<br>Śpiewamy wszyscy w ten radosny czas
+<br>Ref.: Śpiewamy wszyscy w ten radosny czas
 <br>Śpiewamy ilu jest tu nas
 <br>Choć lata szybko młode płyną wiemy, że
 <br>Nigdy nie starzejemy się.<br>
-<br>W lesie gdzie licho śpi, przygoda ma swe drzwi<br>
+<br>2. W lesie gdzie licho śpi, przygoda ma swe drzwi<br>
 <br>Chodźmy tam gdzie na ścianie lasu lśnią
 <br>Oczy sów, wilcze kły, rykiem powietrze drży
 <br>Tylko gwiazdy przyjazne nam są<br>
 <br>Śpiewamy wszyscy w ten radosny czas…<br>
-<br>Dorzuć do ognia drew, w górę niech płanie śpiew
+<br>3. Dorzuć do ognia drew, w górę niech płanie śpiew
 <br>Wiatr poniesie go w wilgotny świat
 <br>Każdy z nas o tym wie, że znowu spotkamy się
-<br>A połączy nas bieszczadzki trakt
+<br>A połączy nas bieszczadzki trakt<br>
 <br>Śpiewamy wszyscy w ten radosny czas
 </p>
-<h3 class="spis" id="trakt">Bieszczadzki Trakt</h3>
+<hr>
+<h3 class="spis" id="pas">Czerwony Pas</h3>
+<p class="center">
+<br>1. Czerwony pas, za pasem broń
+<br>I topór co błyszczy z dala 
+<br>Wesoła myśl swobodna dłoń
+<br>To strój, to życie górala<br>
+<br>Ref.:
+<br>Tam szum Prutu, Czeremoszu, Hucułom przygrywa
+<br>A wesoła kołomyjko do tańca porywa
+<br>Dla Hucuła nie ma życia, jak na połoninie 
+<br>Gdy go losy w doły rzucą wnet z tęsknoty zginie<br>
+<br>
+<br>3. Gdy świeży liść pokryje buk
+<br>I czarna góra sczernieje
+<br>Niech dzwoni flet, niech ryczy róg
+<br>Ożyły nasze nadzieje<br>
+<br>Ref.<br>
+
+<br>4. Pękł rzeki brzeg, popłyną lód
+<br>Czeremosz szumi po skale
+<br>Niech w dobry czas kędziory trzód
+<br>Weseli kąpią górale<br>
+<br>Ref.<br>
+
+<br>5. Połonin step na szczytach gór
+<br>Tam tratwa w pas się podnosi
+<br>Niech ciągnie tam miedz ciasnych sznur
+<br>I żaden pan ich nie kosi<br>
+<br>Ref.<br>
+</p>
+<hr>
 </center>
 			</div>
 		</div>
