--- a/public/podstrony/podstrony_library/sing.html
+++ b/public/podstrony/podstrony_library/sing.html
@@ -23,6 +23,7 @@
 		<li id="navbarli"><a class="active" href="../../podstrony/library_main.html">Biblioteka</a></li>
 	</ul>
 	</div>
+	<div>
 	<div class="sidebar">
 		<h3 class="sidebar">Menu Biblioteki</h3>
 		<ul id="sidebar">
@@ -165,6 +166,7 @@
 		</div>
 	<div class="footer">
 			Copyright &copy; 2017 JanInExile <a id="normal" href="../../podstrony/stopka.html">Stopka</a>
-		</div>
+	</div>
+	</div>	
 </body>
 </html>
