fixed linking for proper display

--- a/public/podstrony/podstrony_library/abilities.html
+++ b/public/podstrony/podstrony_library/abilities.html
@@ -39,9 +39,9 @@
 				
 					<img width="450px" align="right" alt="progress" src="../../images/inprogress/scriptorium-monk-at-work.jpg"/>
 					<ul id="abilities">
-						<li id="abilities"> <a target="blank" href="../../pliki/abilities/booklet.pdf">Książeczka Sprawności ZHR</a> </li>
+						<li id="abilities"> <a target="blank" href="/pliki/abilities/booklet.pdf">Książeczka Sprawności ZHR</a> </li>
 						<li id="abilities"> <a href="../../images/inprogress/progress.jpg">Książeczka Stopni 5 KDH Cyklon</a></li>
-						<li id="abilities"> <a target="blank" href="../../pliki/abilities/tool.dotx">Karty Sprawności "Gotowce"</a></li>
+						<li id="abilities"> <a target="blank" href="/pliki/abilities/tool.dotx">Karty Sprawności "Gotowce"</a></li>
 					</ul>
 
 		</div>
