--- a/public/podstrony/library_main.html
+++ b/public/podstrony/library_main.html
@@ -7,11 +7,12 @@
 	<meta name="author" content="JanInExile">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Biblioteka</title>
-	<link rel="stylesheet" type= "text/css" href="/css/style.css"/>
+	<link rel="stylesheet" type= "text/css" href="../css/style.css"/>
 	<link rel="shortcut icon" href="../icons/favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=Arya" rel="stylesheet" type= "text/css"/>
 </head>
 <body>
+<div class="page">
 	<div class="top">
 		<a id="main" href="../index.html">5 KDH Cyklon</a>
 	</div>
@@ -24,7 +25,10 @@
 	</ul>
 	</div>
 	<div class="sidebar">
-		<h3 class="sidebar">Menu Biblioteki</h3>
+	<center>
+		<div class="block">
+			<h3 class="sidebar">Menu Biblioteki</h3>
+		</div>
 		<ul id="sidebar">
 			<li ><a class="active" href="../podstrony/library_main.html">Stona Główna Biblioteki</a></li>
 			<li ><a href="podstrony_library/archive_main.html">Archiwum</a></li>
@@ -33,8 +37,9 @@
 			<li ><a href="podstrony_library/sing.html">Śpiewnik</a></li>
 			<li ><a href="podstrony_library/abilities.html">Sprawności</a></li>
 		</ul>
+	<center>
 	</div>
-		<div class="content2">
+	<div class="content2">
 			<h1>Biblioteka</h1>
 			<img width="40%" align="right" alt="progress" src="../images/inprogress/scriptorium-monk-at-work.jpg"/>
 			<blockquote align="left">
@@ -63,8 +68,9 @@
 			<hr>
 			</div>
 		</div>
-		<div class="footer">
+	<div class="footer">
 			Copyright &copy; 2017 JanInExile <a id="normal" href="../podstrony/stopka.html">Stopka</a>
 		</div>
+</div>
 </body>
 </html>
