--- a/public/podstrony/library_main.html
+++ b/public/podstrony/library_main.html
@@ -5,14 +5,13 @@
 	<meta name="description" content="Official alpha version of 5 KDH Cykoln's website">
 	<meta name="keywords" content="Wichry, Cyklon, ZHR, 5KDH, Radkiewicz, Balcerowski, Pichór, Kądziołek, Stefan Czarniecki, Czarniecki, Kraków, Szare Wilki, Orły, Gryfy, Lwy, Bronowice, Św. Antoni, Antoni">
 	<meta name="author" content="JanInExile">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Biblioteka</title>
 	<link rel="stylesheet" type= "text/css" href="../css/style.css"/>
 	<link rel="shortcut icon" href="../icons/favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=Arya" rel="stylesheet" type= "text/css"/>
 </head>
 <body>
-<div class="page">
+
 	<div class="top">
 		<a id="main" href="../index.html">5 KDH Cyklon</a>
 	</div>
@@ -24,6 +23,7 @@
 		<li id="navbarli"><a class="active" href="../podstrony/library_main.html">Biblioteka</a></li>
 	</ul>
 	</div>
+<div class="page">
 	<div class="sidebar">
 	<center>
 		<div class="block">
@@ -37,7 +37,7 @@
 			<li ><a href="podstrony_library/sing.html">Śpiewnik</a></li>
 			<li ><a href="podstrony_library/abilities.html">Sprawności</a></li>
 		</ul>
-	<center>
+	</center>
 	</div>
 	<div class="content2">
 			<h1>Biblioteka</h1>
@@ -67,10 +67,10 @@
 			<p class="dedykowany"><i>Dział dedykowany Kasprowi Kądziołkowi</i></p>
 			<hr>
 			</div>
-		</div>
-	<div class="footer">
+	</div>
+</div>
+<div class="footer-sidebar">
 			Copyright &copy; 2017 JanInExile <a id="normal" href="../podstrony/stopka.html">Stopka</a>
-		</div>
 </div>
 </body>
 </html>
