fixinig content height and width isues part three

--- a/public/podstrony/library_main.html
+++ b/public/podstrony/library_main.html
@@ -6,12 +6,11 @@
 	<meta name="keywords" content="Wichry, Cyklon, ZHR, 5KDH, Radkiewicz, Balcerowski, Pichór, Kądziołek, Stefan Czarniecki, Czarniecki, Kraków, Szare Wilki, Orły, Gryfy, Lwy, Bronowice, Św. Antoni, Antoni">
 	<meta name="author" content="JanInExile">
 	<title>Biblioteka</title>
-	<link rel="stylesheet" type= "text/css" href="../css/style.css"/>
+	<link rel="stylesheet" type= "text/css" href="/css/style.css"/>
 	<link rel="shortcut icon" href="../icons/favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=Arya" rel="stylesheet" type= "text/css"/>
 </head>
 <body>
-
 	<div class="top">
 		<a id="main" href="../index.html">5 KDH Cyklon</a>
 	</div>
@@ -40,7 +39,7 @@
 	</center>
 	</div>
 	<div class="content2">
-			<h1>Biblioteka</h1>
+		<h1>Biblioteka</h1>
 			<img width="40%" align="right" alt="progress" src="../images/inprogress/scriptorium-monk-at-work.jpg"/>
 			<blockquote align="left">
 				„Aiunt multum legendum esse, non multa”
