--- a/public/podstrony/podstrony_library/sing.html
+++ b/public/podstrony/podstrony_library/sing.html
@@ -38,7 +38,7 @@
 	<div class="content3">
 			<h1>Śpiewnik</h1>
 			<div class="sider">
-				<img align="right" alt="progress" src="../../images/sensowne/memorial.JPG"/>
+				<img align="right" alt="progress" src="../../images/sensowne/memorial.JPG"/ width="40%">
 			</div>
 			<div class="sub">
 				<h2 class="spis">Spis Treści</h2>
