--- a/public/podstrony/podstrony_library/sing.html
+++ b/public/podstrony/podstrony_library/sing.html
@@ -7,7 +7,7 @@
 	<meta name="author" content="JanInExile">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Śpiewnik</title>
-	<link rel="stylesheet" type= "text/css" href="/css/style.css"/>
+	<link rel="stylesheet" type= "text/css" href="../../css/style.css"/>
 	<link rel="shortcut icon" href="../../icons/favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=Arya" rel="stylesheet" type= "text/css"/>
 </head>
@@ -38,7 +38,7 @@
 	<div class="content3">
 			<h1>Śpiewnik</h1>
 			<div class="sider">
-				<img align="right" alt="progress" src="../../images/sensowne/memorial.JPG"/ width="40%">
+				<img align="right" alt="progress" src="../../images/sensowne/memorial.JPG"/ width="80%">
 			</div>
 			<div class="sub">
 				<h2 class="spis">Spis Treści</h2>
