fixed footer width for proper display

--- a/public/podstrony/podstrony_library/abilities.html
+++ b/public/podstrony/podstrony_library/abilities.html
@@ -46,7 +46,7 @@
 
 		</div>
 		
-		<div class="footer">
+		<div class="footer-sidebar">
 			Copyright &copy; 2017 JanInExile <a id="normal" href="../../podstrony/stopka.html">Stopka</a>
 		</div>
 </body>
