--- a/public/podstrony/podstrony_library/sing.html
+++ b/public/podstrony/podstrony_library/sing.html
@@ -164,7 +164,7 @@
 </center>
 			</div>
 		</div>
-	<div class="footer">
+	<div class="footer-sidebar">
 			Copyright &copy; 2017 JanInExile <a id="normal" href="../../podstrony/stopka.html">Stopka</a>
 	</div>
 	</div>	
