--- a/public/podstrony/podstrony_library/regs.html
+++ b/public/podstrony/podstrony_library/regs.html
@@ -48,7 +48,7 @@
 						<li></li>
 					</ul>
 		</div>
-		<div class="footer">
+		<div class="footer-sidebar">
 			Copyright &copy; 2017 JanInExile <a id="normal" href="../../podstrony/stopka.html">Stopka</a>
 		</div>
 </body>
