--- a/public/podstrony/podstrony_library/archive_main.html
+++ b/public/podstrony/podstrony_library/archive_main.html
@@ -39,7 +39,7 @@
 			<img width="450px" align="right" alt="progress" src="../../images/inprogress/scriptorium-monk-at-work.jpg"/>
 		
 		</div>
-		<div class="footer">
+		<div class="footer-sidebar">
 			Copyright &copy; 2017 JanInExile <a id="normal" href="../../podstrony/stopka.html">Stopka</a>
 		</div>
 </body>
