added proper names and content

--- a/public/podstrony/about.html
+++ b/public/podstrony/about.html
@@ -26,7 +26,7 @@
 	<center>
 		<div class="content-unlimited">
 			<h1>O Drużynie</h1>
-			<p class="dedykowany">Drużyna została założona  w roku 2013 w Bronowicach przy SP nr 50 im. Włodzimierza Tetmajera. Z początku w skład drużyny wchodziły zastępy: „Gryfy” i „Orły”. W następnym roku został założony zastęp „Szare Wilki”. Najmłodszy zastęp, "Niedźwiedzie", działa w Olszanicy przy SP Sióstr Pijarek od września 2016. Te cztery zastępy działają nie przerwanie aż do dziś.
+			<p class="dedykowany">Drużyna została założona  w roku 2013 w Bronowicach przy SP nr 50 im. Włodzimierza Tetmajera. Z początku w skład drużyny wchodziły zastępy: „Gryfy” i „Orły”. W następnym roku został założony zastęp „Szare Wilki”. Najmłodszy zastęp, "Niedźwiedzie", działa w Olszanicy przy SP Sióstr Pijarek od września 2016 roku. Te cztery zastępy działają nie przerwanie aż do dziś.
 <br>Do drużyny może dołączyć każdy chłopiec w wieku 11-15 lat.</p>
 			<br/>
 			<h2>Komenda</h2>
