--- a/public/podstrony/podstrony_library/abilities.html
+++ b/public/podstrony/podstrony_library/abilities.html
@@ -7,7 +7,7 @@
 	<meta name="author" content="JanInExile">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sprawności</title>
-	<link rel="stylesheet" type= "text/css" href="/css/style.css"/>
+	<link rel="stylesheet" type= "text/css" href="../../css/style.css"/>
 	<link rel="shortcut icon" href="../../icons/favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=Arya" rel="stylesheet" type= "text/css"/>
 </head>
@@ -31,11 +31,11 @@
 			<li ><a href="../podstrony_library/rozkazy.html">Rozkazy</a></li>
 			<li ><a href="../podstrony_library/regs.html">Regulaminy</a></li>
 			<li ><a href="../podstrony_library/sing.html">Śpiewnik</a></li>
-			<li ><a class="active" href="../podstrony_library/abilities.html">Sprawności</a></li>
+			<li ><a class="active" href="../podstrony_library/abilities.html">Stopnie i Sprawności</a></li>
 		</ul>
 	</div>
 		<div class="content2">
-				<h1>Sprawności</h1>
+				<h1>Stopnie i Sprawności</h1>	
 				
 					<img width="450px" align="right" alt="progress" src="../../images/inprogress/scriptorium-monk-at-work.jpg"/>
 					<ul id="abilities">
